@@ -3,10 +3,11 @@
 # copyright and related rights waived via CC0 1.0
 
 REFERENCES: "<a href=\"http://refractiveindex.info/download/data/2015/schottzemax-20150722.agf\">SCHOTT Zemax catalog 2015-07-22</a>"
-COMMENTS: "obsolet"
+COMMENTS: "obsolete"
 DATA:
+  - type: formula 2
     range: 0.25 2.5
-    coefficients:
+    coefficients: 0 0.67071081 0.00449192312 0.433322857 0.0132812976 0.8773790570 95.8899878
   - type: tabulated k
     data: |
         0.250 7.9617E-10
