@@ -5,8 +5,9 @@
 REFERENCES: "<a href=\"http://refractiveindex.info/download/data/2015/schottzemax-20150722.agf\">SCHOTT Zemax catalog 2015-07-22</a>"
 COMMENTS: "was replaced by N-LASF31A"
 DATA:
+  - type: formula 2
     range: 0.32 2.5
-    coefficients:
+    coefficients: 0 1.71317198 0.00819172228 0.718575109 0.0297801704 1.7233247 138.461313
   - type: tabulated k
     data: |
         0.320 3.9848E-06
