@@ -6,6 +6,11 @@
     glass/schott/P-LAF37.yml
     glass/schott/inquiry/N-LAF32.yml
     glass/schott/obsolete/SF66.yml
+  bug fixes (thanks to Karsten Pufahl, Technische Universität Berlin, Germany!) - missing dispersion formula
+    glass/schott/inquiry/N-LAF32.yml
+    glass/schott/obsolete/LITHOSIL-Q.yml
+    glass/schott/obsolete/N-LASF31.yml
+    glass/schott/obsolete/N-LASF46.yml
   new data (thanks to Marcelo Alcocer for contributing data via GitHub!)
     main/BaB2O4/Zhang-o.yml
     main/BaB2O4/Zhang-e.yml
